--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
   },
   "homepage": "https://github.com/prpsake/prp-qr-bill#readme",
   "devDependencies": {
-    "@snowpack/plugin-postcss": "^1.4.3",
-    "postcss": "^8.3.6",
-    "snowpack": "^3.8.8",
-    "tailwindcss": "^2.2.15"
+    "snowpack": "^3.8.8"
   },
   "peerDependencies": {
     "hybrids": "^6.1.0"
