--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/prpsake/prp-qr-bill#readme",
   "devDependencies": {
     "@ampire/snowpack-plugin-plugin": "^0.1.2",
-    "glob": "^7.1.7",
-    "snowpack": "^3.8.8"
+    "autoprefixer": "^10.3.5",
+    "execa": "^5.1.1",
+    "postcss": "^8.3.7",
+    "postcss-cli": "^8.3.1",
+    "snowpack": "^3.8.8",
+    "tailwindcss": "^2.2.15"
   },
   "peerDependencies": {
     "hybrids": "^6.1.0"
