--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "execa": "^5.1.1",
     "postcss": "^8.3.7",
     "postcss-cli": "^8.3.1",
+    "rescript": "^9.1.4",
     "snowpack": "^3.8.8",
     "tailwindcss": "^2.2.15"
   },
