--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "HTML QR-Bill using hybrids.js",
   "main": "index.js",
+  "private": true,
   "publishConfig": {
     "registry": " https://npm.ampire.ch/"
   },
