--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "HTML QR-Bill using hybrids.js",
   "publishConfig": {
-    "registry": "https://npm.ampire.ch/"
+    "@prpsake:registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
@@ -38,7 +38,7 @@
     "hybrids": "^6.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "exit 0",
     "start": "snowpack dev",
     "re:start": "rescript build -w",
     "re:build": "rescript",
