--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -28,6 +28,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
+      - run: npm run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
