--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "url": "https://github.com/prpsake/prp-qr-bill/issues"
   },
   "homepage": "https://github.com/prpsake/prp-qr-bill#readme",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@gourmetseasoningsake/snowpack-plugin-plugin": "^0.2.14",
+    "@gourmetseasoningsake/snowpack-plugin-plugin": "^0.2.17",
     "autoprefixer": "^10.3.5",
     "execa": "^5.1.1",
     "postcss": "^8.3.7",
@@ -43,9 +44,9 @@
     "re:start": "rescript build -w",
     "re:build": "rescript",
     "build": "npm run re:build && snowpack build",
-    "build:patch": "npm version patch && npm run build",
-    "build:minor": "npm version minor && npm run build",
-    "build:major": "npm version major && npm run build",
+    "patch": "npm version patch && npm run build",
+    "minor": "npm version minor && npm run build",
+    "major": "npm version major && npm run build",
     "serve:build": "python3 -m http.server --directory ./dist 8080"
   }
 }
