--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
+//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
 @gourmetseasoningsake:registry=https://npm.pkg.github.com
+@prpsake:registry=https://npm.pkg.github.com
