--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@prpsake/prp-qr-bill",
-  "version": "0.1.7",
+  "version": "0.1.6",
   "description": "HTML QR-Bill using hybrids.js",
   "publishConfig": {
-    "@gourmetseasoningsake:registry": "https://npm.pkg.github.com"
+    "@prpsake:registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
