--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.8",
   "description": "HTML QR-Bill using hybrids.js",
   "publishConfig": {
-    "@prpsake:registry": "https://npm.pkg.github.com"
+    "@gourmetseasoningsake:registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
