--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @gourmetseasoningsake:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=$GSS_NPM_TOKEN
+//npm.pkg.github.com/:_authToken=$GITHUB_AUTH
