--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   ],
   "devDependencies": {
     "@gourmetseasoningsake/snowpack-plugin-plugin": "^0.2.18",
+    "@snowpack/plugin-dotenv": "^2.2.0",
     "autoprefixer": "^10.3.5",
+    "dotenv": "^10.0.0",
     "execa": "^5.1.1",
     "postcss": "^8.3.7",
     "postcss-cli": "^8.3.1",
