--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,11 +13,9 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-        env:
-          GSS_NPM_TOKEN: ${{secrets.GSS_NPM_TOKEN}}
       - run: npm test
 
-  publish-gpr:
+  publish:
     needs: build
     runs-on: ubuntu-latest
     permissions:
@@ -28,11 +26,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          registry-url: https://npm.pkg.github.com/
       - run: npm ci
-        env:
-          GSS_NPM_TOKEN: ${{secrets.GSS_NPM_TOKEN}}
+      - run: npm config set registry https://npm.pkg.github.com/
+      - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
+      - run: npm config set //npm.ampire.ch/:_authToken=${{secrets.AMPIRE_TOKEN}}
       - run: npm run build
       - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
