--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "url": "https://github.com/prpsake/prp-qr-bill/issues"
   },
   "homepage": "https://github.com/prpsake/prp-qr-bill#readme",
-  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@gourmetseasoningsake/snowpack-plugin-plugin": "^1.1.2",
+    "@gourmetseasoningsake/snowpack-plugin-plugin": "^1.1.3",
     "autoprefixer": "^10.3.5",
     "execa": "^5.1.1",
     "postcss": "^8.4.4",
@@ -41,9 +40,7 @@
     "re:start": "rescript build -w",
     "re:build": "rescript",
     "build": "npm run re:build && snowpack build",
-    "patch": "npm version patch && npm run build",
-    "minor": "npm version minor && npm run build",
-    "major": "npm version major && npm run build",
-    "serve:build": "python3 -m http.server --directory ./dist 8080"
+    "postpublish:ampire": "npm publish --ignore-scripts --registry=https://npm.ampire.ch/",
+    "postpublish": "npm run postpublish:ampire"
   }
 }
