--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - run: npm config set registry https://npm.pkg.github.com/
+      - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
+      - run: npm config set //npm.ampire.ch/:_authToken=${{secrets.AMPIRE_TOKEN}}
       - run: npm ci
       - run: npm test
 
@@ -26,9 +29,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - run: npm ci
       - run: npm config set registry https://npm.pkg.github.com/
       - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
       - run: npm config set //npm.ampire.ch/:_authToken=${{secrets.AMPIRE_TOKEN}}
+      - run: npm ci
       - run: npm run build
       - run: npm publish
