--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 16
       - run: npm config set @gourmetseasoningsake:registry https://npm.pkg.github.com
+      - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
       - run: npm ci
       - run: npm test
 
