--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -28,9 +28,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - run: npm config set @gourmetseasoningsake:registry https://npm.pkg.github.com
+      - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
       - run: npm ci
       - run: npm config set registry https://npm.pkg.github.com/
-      - run: npm config set //npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
       - run: npm config set //npm.ampire.ch/:_authToken=${{secrets.AMPIRE_TOKEN}}
       - run: npm run build
       - run: npm publish
